# Federated-Learning-And-Class-Imbalances

./: .gitignore  Instructions.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: fedavg_config.py  fedprox_config.py  mnist_config.py  pretrained_config.py  unet_config.py  unet_paper_config.py
notebooks/: dataset_exploration.ipynb  dataset_reduction.ipynb  federated_results.ipynb  first_unet_results.ipynb  optuna_results.ipynb  pretrained_results.ipynb  unet_paper_results.ipynb
results/UNet_paper/: unet_architecture
results/pretrained_model/: fpn_segmentation_config.txt  results.txt
scripts/MNIST_classification/: client.py  mnist_centralised.py  server.py
scripts/UNet_paper/: predict.py  train.py
scripts/UNet_segmentation/: optuna_exploring.py  train_unet.py
scripts/pretrained_model/: evaluate.py  train.py
scripts/seg_fedavg/: main.py  server.py
scripts/seg_fedprox/: main.py  server.py
source/: conf.py  dataset_exploration.rst  dataset_reduction.rst  federated_results.rst  first_unet_results.rst  index.rst  optuna_results.rst  pretrained_results.rst  unet_paper_results.rst
src/: plot_notebooks.py
src/MNIST_classification/: client.py  mnist_centralised.py  model.py  server.py
src/UNet_paper/: dice_coefficient_loss.py  distributed_utils.py  prepare_data.py  train_and_eval.py  unet.py
src/UNet_segmentation/: UNet_model.py  metrics_utils.py  optuna.py  prepare_data.py
src/pretrained_model/: evaluate.py  (+1 more)
tests/: fedavg_test.py  fedprox_test.py  mnist_test.py  pretrained_test.py  unet_paper_test.py  unet_segmentation_test.py
(+60 files in other folders)
