[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "federated_learning"
dynamic = ["version"]  
description = "Federated Learning and Class Imbalances. Study on Breast Lesion Segmentation in DCE-MRI."
readme = "README.md" 
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Marija Nedeljković", email = "mn628@cam.ac.uk" }
]
keywords = ["federated learning", "leasion segmentation", "DCE-MRI", "U-Net", "heterogeneity"]
dependencies = ["tensorflow", "numpy", "matplotlib", "scikit-learn", "flwr", "sphinx", "nbsphinx", "matplotlib", "jupyter"]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "black"
]

[project.urls]
"Documentation" = " "
"Source" = "https://gitlab.developers.cam.ac.uk/phy/data-intensive-science-mphil/assessments/projects/mn628.git"
"Issues" = "https://gitlab.developers.cam.ac.uk/phy/data-intensive-science-mphil/assessments/projects/mn628/issues"

[tool.setuptools_scm]
write_to = "federated_learning/version.py"  

[tool.setuptools.packages.find]
where = ["."]